# eosio-wasm-spec-tests

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
generated-tests/: CMakeLists.txt  address.cpp  align.cpp  binary-leb128.cpp  binary.cpp  block.cpp  br.cpp  br_if.cpp  br_table.cpp  break-drop.cpp  call.cpp  call_indirect.cpp  const.cpp  conversions.cpp  custom.cpp  endianness.cpp  f32.cpp  f32_bitwise.cpp  f32_cmp.cpp  f64.cpp  f64_bitwise.cpp  f64_cmp.cpp  fac.cpp  float_exprs.cpp  float_literals.cpp  float_memory.cpp  float_misc.cpp  forward.cpp  func.cpp  func_ptrs.cpp  globals.cpp  i32.cpp  i64.cpp  if.cpp  int_exprs.cpp  int_literals.cpp  labels.cpp  left-to-right.cpp  load.cpp  local_get.cpp  (+20 more)
generator/: compile_eosio_tests.py  eosio_wasm_spec_test_generator.cpp  generate_eosio_tests.py  setup_eosio_tests.py
